Add new API to get stores and handle empty array query
